[gd_scene load_steps=4 format=3 uid="uid://tkrt246cfqwk"]

[ext_resource type="Script" path="res://Turing/cable.gd" id="1_ltbin"]
[ext_resource type="Script" path="res://Turing/LineEdit.gd" id="1_q0n22"]
[ext_resource type="Texture2D" uid="uid://cbt3qr3hjeorc" path="res://art/échangés (2).png" id="2_d7tsj"]

[node name="Cable" type="Node2D"]
script = ExtResource("1_ltbin")

[node name="LineEdit" type="LineEdit" parent="."]
offset_right = 102.0
offset_bottom = 99.0
theme_override_font_sizes/font_size = 25
alignment = 1
max_length = 1
script = ExtResource("1_q0n22")

[node name="LineEdit2" type="LineEdit" parent="."]
offset_left = 235.0
offset_top = -1.0
offset_right = 337.0
offset_bottom = 98.0
theme_override_font_sizes/font_size = 25
alignment = 1
max_length = 1
script = ExtResource("1_q0n22")

[node name="Échangés" type="Sprite2D" parent="."]
position = Vector2(168, 39)
texture = ExtResource("2_d7tsj")

[node name="Connecter" type="Button" parent="."]
offset_left = 125.0
offset_top = 55.0
offset_right = 213.0
offset_bottom = 86.0
text = "Connecter"

[node name="Good" type="ColorRect" parent="."]
offset_left = 344.0
offset_top = 85.0
offset_right = 355.0
offset_bottom = 96.0
color = Color(0, 1, 0, 1)

[node name="Bad" type="ColorRect" parent="."]
offset_left = 344.0
offset_top = 85.0
offset_right = 355.0
offset_bottom = 96.0
color = Color(1, 0, 0, 1)

[connection signal="connect" from="." to="." method="_on_connect"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_changed" from="LineEdit" to="LineEdit" method="_on_text_changed"]
[connection signal="text_changed" from="LineEdit2" to="." method="_on_line_edit_2_text_changed"]
[connection signal="text_changed" from="LineEdit2" to="LineEdit2" method="_on_text_changed"]
[connection signal="pressed" from="Connecter" to="." method="_on_connecter_pressed"]
